--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1290.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
@@ -25,10 +27,12 @@
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "per-env": "^1.0.2",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "dotenv-cli": "^6.0.0",
